# forja-android-rt

./: Cargo.toml
android/: AndroidManifest.xml
android/src/com/forja/: ForjaResult.kt  ForjaRuntime.kt  ForjaSession.kt
android/template/: README.md  settings.gradle.kts
android/template/app/: build.gradle.kts
android/template/app/src/main/: AndroidManifest.xml
android/template/app/src/main/assets/: main.fa
android/template/app/src/main/java/com/forja/app/: MainActivity.kt
android/template/app/src/main/res/values/: strings.xml  themes.xml
src/: error.rs  jni_bridge.rs  lib.rs  native_android.rs
